tests/NormalTests/paczka1/small_fuzzy/68156191.err
Error in line 3: mAI S442 74,69
Error in line 1: l04DFIw0Yv S109 41,9
